# Text-Summarizer-

./: .gitignore  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: data_ingestion.ipynb  data_transformation.ipynb  data_validation.ipynb  text_summerizer.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: data_ingeston_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py
src/textSummarizer/utils/: common.py
