[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.83",
    "datasets>=4.8.4",
    "ensure>=1.0.4",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.80",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "py7zr>=1.1.0",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers[sentencepiece]>=5.5.0",
    "uvicorn>=0.43.0",
]
